[tool.poetry]
name = "repl_python3_Tradingview-Telegram-Bot"
version = "0.1.0"
description = ""
authors = ["pinecapital"]

[tool.poetry.dependencies]
python = "^3.11.5"
Flask = "^3.0.3"
python-telegram-bot = "^13.7"
selenium = "^4.20.0"
pandas = "^2.2.2"
tabulate = "^0.9.0"
replit = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
